tests/fail/fail_molda_array_fstring.kr
molda Pessoa {
    textu nomi;
    nter idadi;
}

fn inisiu() {
    Pessoa[1] pessoas = [Pessoa::{nomi: "Ana", idadi: 60}];
    mostran(f"{pessoas}");
}
